--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px 0 1px 0;
+  font-size: 20px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 10px;
+  font-size: 20px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  padding: 10px 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
