--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,28 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.left-links, .right-links {
+  padding: 10px;
+}
+
+.left-links > ul, .right-links > ul {
+  display: flex;
+  align-items: center;
+  padding: 0;
+}
+
+.left-links > ul {
+  justify-content: flex-start;
+}
+
+.right-links > ul {
+  justify-content: flex-end;
 }
 
 .logo {
@@ -14,6 +36,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+}
+
+li {
+  padding: 5px;
 }
 
 a {
