--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,9 +7,33 @@ img {
   height: 100px;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1400px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+  min-width: 100px;
+  text-align: center;
+}
+
+.card img {
+  margin-bottom: 10px;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  padding: 30px;
+  text-align: center;
 }
 
 /* do not edit this footer */
